--- a/Informatik/index.html
+++ b/Informatik/index.html
@@ -16,6 +16,14 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Informatik</h1>
+      <h2>Artificial Intelligence</h2>
+      <ol>
+        <li>
+          <a href="artificialIntelligence.html" class="indexLink"
+            >Artificial Intelligence</a
+          >
+        </li>
+      </ol>
       <h2>Java</h2>
       <ol>
         <li>
@@ -47,6 +55,26 @@
       <ol>
         <li>
           <a href="latexBasics.html" class="indexLink">LATEX Basics</a>
+        </li>
+      </ol>
+      <h2>Technische Informatik</h2>
+      <ol>
+        <li>
+          <a href="grundlagenDerDigitaltechnik.html" class="indexLink"
+            >Grundlagen der Digitaltechnik</a
+          >
+        </li>
+        <li>
+          <a href="zahlensystemeDerInformatik.html" class="indexLink"
+            >Zahlensysteme der Informatik</a
+          >
+        </li>
+      </ol>
+      <hr />
+      <h2>Tabellen</h2>
+      <ol>
+        <li>
+          <a href="vorsilben.html" class="indexLink">Vorsilben</a>
         </li>
       </ol>
     </div>
