--- a/Mathe/index.html
+++ b/Mathe/index.html
@@ -112,12 +112,18 @@
           </a>
         </li>
         <li>
-          <a href="integration.html" class="indexLink"> Intégration </a>
+          <a href="integration.html" class="indexLink"> Intégration</a>
         </li>
         <li>
           <a href="logiqueElementaire.html" class="indexLink">
             Logique Élémentaire
           </a>
+        </li>
+        <li>
+          <a href="demonstrations.html" class="indexLink"> Démonstrations</a>
+        </li>
+        <li>
+          <a href="vecteurs.html" class="indexLink">Vecteurs</a>
         </li>
       </ol>
       <!-- <h3>Bemierkung</h3>
