--- a/changeLog.html
+++ b/changeLog.html
@@ -118,11 +118,26 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 46</h3>
-            <time>9.2023</time>
+            <time>.10.2023</time>
             <ul>
               <li class="changeLogText">
-                Neit Kapitel an der Mathé: Logique Élémentaire
+                Neit Kapitel an der Mathé: Logique Élémentaire, Démonstrations,
+                Vectuers
               </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Informatik: Artificial Intelligence,
+                Digitaltechnik, Vorsilben der Informatik, Zahlensysteme
+              </li>
+              <li class="changeLogText">
+                Nei Einheiten an Exotische Umwandlungen
+              </li>
+              <li class="changeLogText">
+                Nei Exercicer: Digitaltechnik Grundlagen, Logique Élémentaire,
+                Zahlensysteme, Mouvements simples
+              </li>
+              <li class="changeLogText">Ergänzungen am Kapitel: Präfixe</li>
+              <li class="changeLogText">Nei Einheiten am Converter</li>
+              <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 45</h3>
             <time>6.7.2023</time>
