--- a/Divers/praefixe.html
+++ b/Divers/praefixe.html
@@ -11,6 +11,7 @@
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
+    <script src="../assets/mathJax.js"></script>
     <script defer src="../feedbackPopup.js"></script>
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
@@ -21,158 +22,146 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <p id="printWatermark"></p>
+      <h1>Präfixe</h1>
+      <h2>Präfixe</h2>
       <table>
         <tr>
-          <th>$$Symbol$$</th>
-          <th>$$Name$$</th>
-          <th>$$10^{x}$$</th>
-          <th>$$Zahlwort$$</th>
+          <th><p>Symbol</p></th>
+          <th><p>Name</p></th>
+          <th><p>$10^{x}$</p></th>
+          <th><p>Zahlworte</p></th>
         </tr>
         <tr>
-          <td>$$Y$$</td>
-          <td>$$Yotta$$</td>
-          <td>$$10^{24}$$</td>
-          <td>$$Quadrillion$$</td>
+          <td><p>Q</p></td>
+          <td><p>quetta</p></td>
+          <td><p>$10^{20}$</p></td>
+          <td><p>Quintillion</p></td>
         </tr>
-
         <tr>
-          <td>$$Z$$</td>
-          <td>$$Zetta$$</td>
-          <td>$$10^{21}$$</td>
-          <td>$$Trilliarde$$</td>
+          <td><p>R</p></td>
+          <td><p>ronna</p></td>
+          <td><p>$10^{27}$</p></td>
+          <td><p>Quadrilliarde</p></td>
         </tr>
-
         <tr>
-          <td>$$E$$</td>
-          <td>$$Exa$$</td>
-          <td>$$10^{18}$$</td>
-          <td>$$Trillion$$</td>
+          <td><p>Y</p></td>
+          <td><p>yotta</p></td>
+          <td><p>$10^{24}$</p></td>
+          <td><p>Quadrillion</p></td>
         </tr>
-
         <tr>
-          <td>$$P$$</td>
-          <td>$$Peta$$</td>
-          <td>$$10^{15}$$</td>
-          <td>$$Billiarde$$</td>
+          <td><p>Z</p></td>
+          <td><p>zetta</p></td>
+          <td><p>$10^{21}$</p></td>
+          <td><p>Trilliarde</p></td>
         </tr>
-
         <tr>
-          <td>$$T$$</td>
-          <td>$$Tera$$</td>
-          <td>$$10^{12}$$</td>
-          <td>$$Billion$$</td>
+          <td><p>E</p></td>
+          <td><p>exa</p></td>
+          <td><p>$10^{18}$</p></td>
+          <td><p>Trillion</p></td>
         </tr>
-
         <tr>
-          <td>$$G$$</td>
-          <td>$$Giga$$</td>
-          <td>$$10^{9}$$</td>
-          <td>$$Milliarde$$</td>
+          <td><p>P</p></td>
+          <td><p>peta</p></td>
+          <td><p>$10^{15}$</p></td>
+          <td><p>Billiarde</p></td>
         </tr>
-
         <tr>
-          <td>$$M$$</td>
-          <td>$$Mega$$</td>
-          <td>$$10^{6}$$</td>
-          <td>$$Million$$</td>
+          <td><p>T</p></td>
+          <td><p>tera</p></td>
+          <td><p>$10^{12}$</p></td>
+          <td><p>Billion</p></td>
         </tr>
-
         <tr>
-          <td>$$k$$</td>
-          <td>$$Kilo$$</td>
-          <td>$$10^{3}$$</td>
-          <td>$$Tausend$$</td>
+          <td><p>G</p></td>
+          <td><p>giga</p></td>
+          <td><p>$10^{9}$</p></td>
+          <td><p>Milliarde</p></td>
         </tr>
-
         <tr>
-          <td>$$h$$</td>
-          <td>$$Hekto$$</td>
-          <td>$$10^{2}$$</td>
-          <td>$$Hundert$$</td>
+          <td><p>M</p></td>
+          <td><p>mega</p></td>
+          <td><p>$10^{6}$</p></td>
+          <td><p>Million</p></td>
         </tr>
-
         <tr>
-          <td>$$da$$</td>
-          <td>$$Deka$$</td>
-          <td>$$10^{1}$$</td>
-          <td>$$Zehn$$</td>
+          <td><p>k</p></td>
+          <td><p>kilo</p></td>
+          <td><p>$10^{3}$</p></td>
+          <td><p>Tausend</p></td>
         </tr>
-
         <tr>
-          <td>$$-$$</td>
-          <td>$$-$$</td>
-          <td>$$10^{0}$$</td>
-          <td>$$Eins$$</td>
+          <td><p>-</p></td>
+          <td><p>-</p></td>
+          <td><p>$10^{0}$</p></td>
+          <td><p>Eins</p></td>
         </tr>
-
         <tr>
-          <td>$$d$$</td>
-          <td>$$Deci$$</td>
-          <td>$$10^{-1}$$</td>
-          <td>$$Zehntel$$</td>
+          <td><p>d</p></td>
+          <td><p>deci</p></td>
+          <td><p>$10^{-2}$</p></td>
+          <td><p>Hundertstel</p></td>
         </tr>
-
         <tr>
-          <td>$$c$$</td>
-          <td>$$Zenti$$</td>
-          <td>$$10^{-2}$$</td>
-          <td>$$Hundertstel$$</td>
+          <td><p>m</p></td>
+          <td><p>milli</p></td>
+          <td><p>$10^{-3}$</p></td>
+          <td><p>Tausendstel</p></td>
         </tr>
-
         <tr>
-          <td>$$m$$</td>
-          <td>$$Milli$$</td>
-          <td>$$10^{-3}$$</td>
-          <td>$$Tausendstel$$</td>
+          <td><p>$\mu$</p></td>
+          <td><p>micro</p></td>
+          <td><p>$10^{-6}$</p></td>
+          <td><p>Millionstel</p></td>
         </tr>
-
         <tr>
-          <td>$$&mu;$$</td>
-          <td>$$Mikro$$</td>
-          <td>$$10^{-6}$$</td>
-          <td>$$Millionstel$$</td>
+          <td><p>n</p></td>
+          <td><p>nano</p></td>
+          <td><p>$10^{-9}$</p></td>
+          <td><p>Milliardstel</p></td>
         </tr>
-
         <tr>
-          <td>$$n$$</td>
-          <td>$$Nano$$</td>
-          <td>$$10^{-9}$$</td>
-          <td>$$Milliardstel$$</td>
+          <td><p>p</p></td>
+          <td><p>pico</p></td>
+          <td><p>$10^{-12}$</p></td>
+          <td><p>Billionstel</p></td>
         </tr>
-
         <tr>
-          <td>$$p$$</td>
-          <td>$$Piko$$</td>
-          <td>$$10^{-12}$$</td>
-          <td>$$Billionstel$$</td>
+          <td><p>f</p></td>
+          <td><p>femto</p></td>
+          <td><p>$10^{-15}$</p></td>
+          <td><p>Billiardstel</p></td>
         </tr>
-
         <tr>
-          <td>$$f$$</td>
-          <td>$$Femto$$</td>
-          <td>$$10^{-15}$$</td>
-          <td>$$Billiardstel$$</td>
+          <td><p>a</p></td>
+          <td><p>atto</p></td>
+          <td><p>$10^{-18}$</p></td>
+          <td><p>Trillionstel</p></td>
         </tr>
-
         <tr>
-          <td>$$a$$</td>
-          <td>$$Atto$$</td>
-          <td>$$10^{-18}$$</td>
-          <td>$$Trillionstel$$</td>
+          <td><p>z</p></td>
+          <td><p>zepto</p></td>
+          <td><p>$10^{-21}$</p></td>
+          <td><p>Trilliardstel</p></td>
         </tr>
-
         <tr>
-          <td>$$z$$</td>
-          <td>$$Zepto$$</td>
-          <td>$$10^{-21}$$</td>
-          <td>$$Trilliardstel$$</td>
+          <td><p>y</p></td>
+          <td><p>yocto</p></td>
+          <td><p>$10^{-24}$</p></td>
+          <td><p>Quadrillionstel</p></td>
         </tr>
-
         <tr>
-          <td>$$y$$</td>
-          <td>$$Yokto$$</td>
-          <td>$$10^{-24}$$</td>
-          <td>$$Quadrillionstel$$</td>
+          <td><p>r</p></td>
+          <td><p>ronto</p></td>
+          <td><p>$10^{-27}$</p></td>
+          <td><p>Quadrilliardstel</p></td>
+        </tr>
+        <tr>
+          <td><p>q</p></td>
+          <td><p>quecto</p></td>
+          <td><p>$10^{-30}$</p></td>
+          <td><p>Quintillionstel</p></td>
         </tr>
       </table>
     </div>
