--- a/Elektrotechnik/index.html
+++ b/Elektrotechnik/index.html
@@ -42,6 +42,11 @@
             >Wechselstromtechnik</a
           >
         </li>
+        <li>
+          <a href="elektrischeWiderstand.html" class="indexLink"
+            >Elektrische Widerstand</a
+          >
+        </li>
       </ol>
       <hr />
       <h2>Schaltungen</h2>
