--- a/Informatik/artificialIntelligence.html
+++ b/Informatik/artificialIntelligence.html
@@ -52,6 +52,12 @@
           <p>We obtain a result</p>
         </li>
       </ol>
+      <h2>Machine learning</h2>
+      <img
+        src="img/ArtificialIntelligence/machineLearning.png"
+        alt="machineLearning"
+        class="zeichnungen"
+      />
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
