--- a/Informatik/index.html
+++ b/Informatik/index.html
@@ -16,14 +16,14 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Informatik</h1>
-      <h2>Artificial Intelligence</h2>
+      <!-- <h2>Artificial Intelligence</h2>
       <ol>
         <li>
           <a href="artificialIntelligence.html" class="indexLink"
             >Artificial Intelligence</a
           >
         </li>
-      </ol>
+      </ol> -->
       <h2>Java</h2>
       <ol>
         <li>
@@ -75,6 +75,11 @@
       <ol>
         <li>
           <a href="vorsilben.html" class="indexLink">Vorsilben</a>
+        </li>
+        <li>
+          <a href="binaerzahlenZahlenbereiche.html" class="indexLink"
+            >Zahlenbereiche der Binärzahlen</a
+          >
         </li>
       </ol>
     </div>
