--- a/Mathe/demonstrations.html
+++ b/Mathe/demonstrations.html
@@ -23,7 +23,7 @@
     <div class="main-wrapper">
       <p id="printWatermark"></p>
       <h1>Démonstrations</h1>
-      <h2>Démonstrations</h2>
+      <h2>Démonstration</h2>
       <h3>Définition</h3>
       <p>
         Une démonstration mathématique est une suite d'assertions mathématiques,
@@ -76,7 +76,9 @@
           <p><u>Démonstration par contraposée</u></p>
           <p>
             Dans une preuve par contraposée, on suppose la négation de la
-            conclusion et on montre la négation de l'hypothèse.
+            conclusion et on montre la négation de l'hypothèse. <br />
+            Ainsi, montrer “Si P alors Q” par contraposée signifie qu'on part de
+            “non Q” et qu'on arrive à “non P ”.
           </p>
         </li>
       </ul>
