--- a/changeLog.html
+++ b/changeLog.html
@@ -118,22 +118,21 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 46</h3>
-            <time>.10.2023</time>
+            <time>15.10.2023</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Mathé: Logique Élémentaire, Démonstrations,
                 Vectuers
               </li>
               <li class="changeLogText">
-                Neit Kapitel an der Informatik: Artificial Intelligence,
-                Digitaltechnik, Vorsilben der Informatik, Zahlensysteme
+                Neit Kapitel an der Informatik: Digitaltechnik, Vorsilben der
+                Informatik, Zahlensysteme
+              </li>
+              <li class="changeLogText">
+                Ohm'sches Gesetz gouf ersaat duerch: Elektrische Widerstand
               </li>
               <li class="changeLogText">
                 Nei Einheiten an Exotische Umwandlungen
-              </li>
-              <li class="changeLogText">
-                Nei Exercicer: Digitaltechnik Grundlagen, Logique Élémentaire,
-                Zahlensysteme, Mouvements simples
               </li>
               <li class="changeLogText">Ergänzungen am Kapitel: Präfixe</li>
               <li class="changeLogText">Nei Einheiten am Converter</li>
