--- a/Archiv/Chimie/index.html
+++ b/Archiv/Chimie/index.html
@@ -24,8 +24,23 @@
       <h2>Chemie</h2>
       <ol>
         <li>
+          <p><u>Allgemeine Chemie</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Allgemeine Chemie/Saeuren und Basen.pdf"
+                >Organische Chemie</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
           <p><u>Organische Chemie</u></p>
           <ul>
+            <li>
+              <a href="pdf/Organische Chemie/Organische Chemie.pdf"
+                >Organische Chemie</a
+              >
+            </li>
             <li>
               <a href="pdf/Organische Chemie/Alkane.pdf">Alkane</a>
             </li>
