--- a/Archiv/Digitaltechnik/index.html
+++ b/Archiv/Digitaltechnik/index.html
@@ -18,38 +18,36 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Archiv</h1>
-      <h2 class="uppercase">Exercicer</h2>
+      <h2>Exercicer</h2>
       <hr />
-      <h2>Programmation en Java</h2>
+      <h2>Mechanik</h2>
       <ol>
         <li>
-          <p><u>Java Basics</u></p>
-          <li>
-            <li>
-              <a href="pdf/Java Basics/Java Basics.pdf">Java Basics</a>
-            </li>
-          </li>
-        </li>
-        <li>
-          <p><u>La classe Timer</u></p>
+          <p><u>Digitaltechnik</u></p>
           <ul>
             <li>
-              <a href="pdf/Classe Timer/Chronometre.pdf">Chronomètre</a>
+              <a href="pdf/Digitaltechnik/Digitaltechnik Intro.pdf"
+                >Digitaltechnik Intro</a
+              >
             </li>
             <li>
-              <a href="pdf/Classe Timer/Moving Ball.pdf">Moving Ball</a>
-            </li>
-            <li>
-              <a href="pdf/Classe Timer/Moving Balls.pdf">Moving Balls</a>
+              <a href="pdf/Digitaltechnik/Bool'sche Algebra.pdf"
+                >Bool'sche Algebra</a
+              >
             </li>
           </ul>
         </li>
         <li>
-          <p><u>Héritage</u></p>
+          <p><u>Technische Informatik</u></p>
           <ul>
             <li>
-              <a href="pdf/Heritage/Emojis.pdf">Emojis</a>
+              <a href="pdf/Technische Informatik/Codes.pdf">Codes</a>
             </li>
+            <!-- <li>
+              <a href="pdf/Technische Informatik/Zahlensysteme.pdf"
+                >Zahlensysteme</a
+              >
+            </li> -->
           </ul>
         </li>
       </ol>
