--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -25,6 +25,11 @@
           <a class="indexLink" href="Chimie/index.html">Chemie</a>
         </li>
         <li>
+          <a class="indexLink" href="Digitaltechnik/index.html"
+            >Digitaltechnik</a
+          >
+        </li>
+        <li>
           <a class="indexLink" href="Elektrotechnik/index.html"
             >Elektrotechnik</a
           >
