--- a/Archiv/Physik/index.html
+++ b/Archiv/Physik/index.html
@@ -51,16 +51,24 @@
           </ul>
         </li>
         <li>
-          <p><u>Strahlenoptik</u></p>
+          <p><u>Klassische Physik</u></p>
           <ul>
             <li>
-              <a href="pdf/Strahlenoptik/Strahlenoptik.pdf">Strahlenoptik</a>
+              <a href="pdf/Klassische Physik/Stossvorgaenge.pdf"
+                >Stoßvorgänge
+              </a>
+            </li>
+            <li>
+              <a href="pdf/Klassische Physik/Chute libre.pdf">Chute libre </a>
             </li>
           </ul>
         </li>
         <li>
-          <p><u>Wellenoptik</u></p>
+          <p><u>Optik</u></p>
           <ul>
+            <li>
+              <a href="pdf/Strahlenoptik/Strahlenoptik.pdf">Strahlenoptik</a>
+            </li>
             <li>
               <a href="pdf/Wellenoptik/Wellenoptik.pdf">Wellenoptik</a>
             </li>
