--- a/Archiv/Chimie/index.html
+++ b/Archiv/Chimie/index.html
@@ -28,7 +28,7 @@
           <ul>
             <li>
               <a href="pdf/Allgemeine Chemie/Saeuren und Basen.pdf"
-                >Organische Chemie</a
+                >Säuren und Basen</a
               >
             </li>
           </ul>
