--- a/changeLog.html
+++ b/changeLog.html
@@ -118,13 +118,12 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 47</h3>
-            <time>.11.2023</time>
+            <time>3.11.2023</time>
             <ul>
               <li class="changeLogText">
                 Nei Exercicer: <br />
                 Organische Chemie, Säure und Basen, Java Basics, Digitaltechnik
-                Intro, Codes, Zahlensysteme, Bool'sche Algebra, Chute libre,
-                Stoßvorgänge
+                Intro, Codes, Bool'sche Algebra, Chute libre, Stoßvorgänge
               </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
